image folder change

--- a/public/dashboard/assets/css/paper-dashboard.css
+++ b/public/dashboard/assets/css/paper-dashboard.css
@@ -4749,7 +4749,7 @@ License - nucleoapp.com/license/
   position: relative;
   padding: 7px 0.7rem;
   z-index: 4;
-  background-color: #0090e0;
+  background-color: #fc9209;
 }
 
 .sidebar .logo a.logo-mini,
